--- a/app/src/main/res/layout/fragment_physical_level.xml
+++ b/app/src/main/res/layout/fragment_physical_level.xml
@@ -38,7 +38,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tvHeadingHowOld" />
 
     <RadioGroup
-        android:id="@+id/rgGenderButtons"
+        android:id="@+id/rgPhysicalLevelButtons"
 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -54,13 +54,13 @@
             android:text="@string/level_beginner" />
 
         <RadioButton
-            android:id="@+id/btnGainWeight"
+            android:id="@+id/btnIntermediate"
             style="@style/RadioBtnPhysicalLevel"
             android:layout_marginTop="32dp"
             android:text="Intermediate" />
 
         <RadioButton
-            android:id="@+id/btnMuscleGain"
+            android:id="@+id/btnAdvance"
             style="@style/RadioBtnPhysicalLevel"
             android:layout_marginTop="32dp"
             tools:checked="true"
