--- a/app/src/main/res/layout/fragment_sign_up_choose.xml
+++ b/app/src/main/res/layout/fragment_sign_up_choose.xml
@@ -16,6 +16,17 @@
         android:layout_marginEnd="-16dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="1dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/btnAuthGoogle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
