--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/startFragment">
+    app:startDestination="@id/blankFragment">
+
+    <action
+        android:id="@+id/action_global_to_startFragment"
+        app:destination="@id/startFragment"
+        app:launchSingleTop="true"
+        app:popUpTo="@id/blankFragment"
+        app:popUpToInclusive="true" />
+
+    <action
+        android:id="@+id/action_global_to_genderFragment"
+        app:destination="@id/genderFragment"
+        app:launchSingleTop="true"
+        app:popUpTo="@id/blankFragment"
+        app:popUpToInclusive="true" />
+
+    <action
+        android:id="@+id/action_global_to_homeFragment"
+        app:destination="@id/homeFragment"
+        app:launchSingleTop="true"
+        app:popUpTo="@id/blankFragment"
+        app:popUpToInclusive="true" />
+
     <fragment
         android:id="@+id/startFragment"
         android:name="com.example.pulseup.ui.auth.StartFragment"
@@ -24,6 +46,12 @@
         <action
             android:id="@+id/action_signUpChooseFragment_to_authEmailFragment"
             app:destination="@id/authEmailFragment" />
+        <action
+            android:id="@+id/action_signUpChooseFragment_to_genderFragment"
+            app:destination="@id/genderFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/blankFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/authEmailFragment"
@@ -35,7 +63,10 @@
             app:argType="integer" />
         <action
             android:id="@+id/action_authEmailFragment_to_genderFragment"
-            app:destination="@id/genderFragment" />
+            app:destination="@id/genderFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/blankFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/genderFragment"
@@ -44,7 +75,10 @@
         tools:layout="@layout/fragment_gender" >
         <action
             android:id="@+id/action_genderFragment_to_howOldAreYouFragment"
-            app:destination="@id/howOldAreYouFragment" />
+            app:destination="@id/howOldAreYouFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
+
     </fragment>
     <fragment
         android:id="@+id/howOldAreYouFragment"
@@ -53,7 +87,9 @@
         tools:layout="@layout/fragment_how_old_are_you" >
         <action
             android:id="@+id/action_howOldAreYouFragment_to_whatsYourWeightFragment"
-            app:destination="@id/whatsYourWeightFragment" />
+            app:destination="@id/whatsYourWeightFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/whatsYourWeightFragment"
@@ -62,7 +98,9 @@
         tools:layout="@layout/fragment_whats_your_weight" >
         <action
             android:id="@+id/action_whatsYourWeightFragment_to_heightFragment"
-            app:destination="@id/heightFragment" />
+            app:destination="@id/heightFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/heightFragment"
@@ -74,7 +112,9 @@
             app:argType="integer" />
         <action
             android:id="@+id/action_heightFragment_to_whatsYourGoalFragment"
-            app:destination="@id/whatsYourGoalFragment" />
+            app:destination="@id/whatsYourGoalFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/whatsYourGoalFragment"
@@ -83,7 +123,9 @@
         tools:layout="@layout/fragment_whats_your_goal" >
         <action
             android:id="@+id/action_whatsYourGoalFragment_to_physicalLevelFragment"
-            app:destination="@id/physicalLevelFragment" />
+            app:destination="@id/physicalLevelFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/physicalLevelFragment"
@@ -92,11 +134,70 @@
         tools:layout="@layout/fragment_physical_level" >
         <action
             android:id="@+id/action_physicalLevelFragment_to_fillYourProfileFragment"
-            app:destination="@id/fillYourProfileFragment" />
+            app:destination="@id/fillYourProfileFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/fillYourProfileFragment"
         android:name="com.example.pulseup.ui.setUp.FillYourProfileFragment"
         android:label="fragment_fill_your_profile"
-        tools:layout="@layout/fragment_fill_your_profile" />
+        tools:layout="@layout/fragment_fill_your_profile" >
+        <action
+            android:id="@+id/action_fillYourProfileFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/blankFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.example.pulseup.ui.main.HomeFragment"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_workoutFragment"
+            app:destination="@id/workoutFragment"
+            app:enterAnim="@anim/nav_default_enter_anim" />
+    </fragment>
+    <fragment
+        android:id="@+id/blankFragment"
+        android:name="com.example.pulseup.ui.BlankFragment"
+        android:label="fragment_blank"
+        tools:layout="@layout/fragment_blank" >
+        <action
+            android:id="@+id/action_blankFragment_to_startFragment"
+            app:destination="@id/startFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/workoutFragment"
+        android:name="com.example.pulseup.ui.main.WorkoutFragment"
+        android:label="fragment_workout"
+        tools:layout="@layout/fragment_workout" >
+        <argument
+            android:name="workoutId"
+            app:argType="string" />
+        <action
+            android:id="@+id/action_workoutFragment_to_trainingFragment"
+            app:destination="@id/trainingFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/trainingFragment"
+        android:name="com.example.pulseup.ui.main.TrainingFragment"
+        android:label="fragment_training"
+        tools:layout="@layout/fragment_training" >
+        <argument
+            android:name="workoutId"
+            app:argType="string" />
+        <action
+            android:id="@+id/action_trainingFragment_to_endWorkoutFragment"
+            app:destination="@id/endWorkoutFragment"
+            app:enterAnim="@anim/nav_default_pop_enter_anim"
+            app:popUpTo="@id/homeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/endWorkoutFragment"
+        android:name="com.example.pulseup.ui.main.EndWorkoutFragment"
+        android:label="fragment_end_workout"
+        tools:layout="@layout/fragment_end_workout" />
 </navigation>
