--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="lime_green">#E2F163</color>
     <color name="lime_dark_green">#9AA443</color>
     <color name="purple">#896CFE</color>
+    <color name="purple_A20">#33896CFE</color>
     <color name="light_purple">#B3A0FF</color>
 </resources>
