--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,6 +40,10 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="MyTextAppearance.H2.Black">
+        <item name="android:textColor">@color/black_main</item>
+    </style>
+
     <style name="MyTextAppearance.H2.White_A80">
         <item name="android:textColor">@color/white_A80</item>
     </style>
@@ -60,12 +64,28 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="MyTextAppearance.Body1.Lime">
+        <item name="android:textColor">@color/lime_green</item>
+    </style>
+
+    <style name="MyTextAppearance.Body2" parent="Text.PoppinsRegular">
+        <item name="android:textSize">10sp</item>
+    </style>
+
+    <style name="MyTextAppearance.Body2.White">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
     <style name="MyTextAppearance.BodyBold1" parent="Text.PoppinsBold">
         <item name="android:textSize">13sp</item>
     </style>
 
     <style name="MyTextAppearance.BodyBold1.White">
         <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="MyTextAppearance.BodyBold1.White_A80">
+        <item name="android:textColor">@color/white_A80</item>
     </style>
 
     <style name="MyTextAppearance.BodyBold1.Lime">
@@ -118,6 +138,13 @@
         <item name="android:background">@drawable/bg_button_google</item>
         <item name="android:textAppearance">@style/MyTextAppearance.Button1</item>
         <item name="android:textColor">@color/black_main</item>
+        <item name="backgroundTint">@null</item>
+    </style>
+
+    <style name="ButtonBlack">
+        <item name="android:background">@drawable/bg_button_black</item>
+        <item name="android:textAppearance">@style/MyTextAppearance.Button1</item>
+        <item name="android:textColor">@color/white</item>
         <item name="backgroundTint">@null</item>
     </style>
 
@@ -185,4 +212,45 @@
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
     </style>
+
+    <style name="RectangleRoundedCornersImageView">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">20%</item>
+    </style>
+
+    <style name="RectangleBottomRoundedCornersImageView">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSizeBottomLeft">40dp</item>
+        <item name="cornerSizeBottomRight">40dp</item>
+    </style>
+
+    <style name="RectangleTopRoundedCornersImageView">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSizeTopLeft">30dp</item>
+        <item name="cornerSizeTopRight">30dp</item>
+    </style>
+
+    <style name="TvWorkoutDescription">
+        <item name="android:drawablePadding">4dp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:elevation">1dp</item>
+        <item name="android:textAppearance">@style/Text.PoppinsRegular</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="TvWorkoutDescription.White">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:drawableTint">@color/white</item>
+    </style>
+
+    <style name="TvWorkoutDescription.Black">
+        <item name="android:textColor">@color/black_main</item>
+        <item name="android:drawableTint">@color/black_main</item>
+    </style>
+
+    <style name="TvWorkoutDescription.Purple">
+        <item name="android:textColor">@color/purple</item>
+        <item name="android:drawableTint">@color/purple</item>
+    </style>
+
 </resources>
