--- a/app/src/main/res/layout/fragment_how_old_are_you.xml
+++ b/app/src/main/res/layout/fragment_how_old_are_you.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black_main"
-    tools:context=".ui.setUp.HowOldAreYouFragment">
+    tools:context=".ui.setUp.age.HowOldAreYouFragment">
 
     <include
         android:id="@+id/toolbar"
