--- a/app/src/main/res/drawable/bg_bottom_menu.xml
+++ b/app/src/main/res/drawable/bg_bottom_menu.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/white_A80" />
+            <solid android:color="@color/light_purple" />
             <corners android:topLeftRadius="50dp" android:topRightRadius="50dp"/>
         </shape>
     </item>
