--- a/app/src/main/res/layout/fragment_end_workout.xml
+++ b/app/src/main/res/layout/fragment_end_workout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black_main"
-    tools:context=".ui.main.EndWorkoutFragment">
+    tools:context=".ui.main.workout.EndWorkoutFragment">
 
     <include
         android:id="@+id/toolbar"
