--- a/app/src/main/res/layout/fragment_height.xml
+++ b/app/src/main/res/layout/fragment_height.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.setUp.HeightFragment"
+    tools:context=".ui.setUp.weightHeight.HeightFragment"
     android:background="@color/black_main">
 
     <include
