--- a/app/src/main/res/layout/fragment_training.xml
+++ b/app/src/main/res/layout/fragment_training.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black_main"
-    tools:context=".ui.main.TrainingFragment">
+    tools:context=".ui.main.workout.TrainingFragment">
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -103,6 +103,22 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnSkip"
+        style="@style/ButtonPrimary"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="16dp"
+        android:drawableRight="@drawable/ic_arrow_right"
+
+        android:text="Skip"
+        android:textAppearance="@style/MyTextAppearance.BodyBold1"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="@+id/tvTime"
+        app:layout_constraintStart_toStartOf="@+id/tvTime"
+        app:layout_constraintTop_toBottomOf="@+id/tvTime" />
+
 
     <TextView
         android:id="@+id/tvTime"
