--- a/app/src/main/res/layout/fragment_workout.xml
+++ b/app/src/main/res/layout/fragment_workout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black_main"
-    tools:context=".ui.main.WorkoutFragment">
+    tools:context=".ui.main.workout.WorkoutFragment">
 
     <ProgressBar
         android:id="@+id/progressBar"
