--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -26,6 +26,13 @@
         app:popUpTo="@id/blankFragment"
         app:popUpToInclusive="true" />
 
+    <action
+        android:id="@+id/action_global_to_mainFragment"
+        app:destination="@id/mainFragment"
+        app:launchSingleTop="true"
+        app:popUpTo="@id/blankFragment"
+        app:popUpToInclusive="true" />
+
     <fragment
         android:id="@+id/startFragment"
         android:name="com.example.pulseup.ui.auth.StartFragment"
@@ -67,6 +74,13 @@
             app:launchSingleTop="true"
             app:popUpTo="@id/blankFragment"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_authEmailFragment_to_mainFragment"
+            app:destination="@id/mainFragment"
+            app:enterAnim="@anim/nav_default_pop_enter_anim"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/startFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/genderFragment"
@@ -82,7 +96,7 @@
     </fragment>
     <fragment
         android:id="@+id/howOldAreYouFragment"
-        android:name="com.example.pulseup.ui.setUp.HowOldAreYouFragment"
+        android:name="com.example.pulseup.ui.setUp.age.HowOldAreYouFragment"
         android:label="fragment_how_old_are_you"
         tools:layout="@layout/fragment_how_old_are_you" >
         <action
@@ -93,7 +107,7 @@
     </fragment>
     <fragment
         android:id="@+id/whatsYourWeightFragment"
-        android:name="com.example.pulseup.ui.setUp.WhatsYourWeightFragment"
+        android:name="com.example.pulseup.ui.setUp.weightHeight.WhatsYourWeightFragment"
         android:label="fragment_whats_your_weight"
         tools:layout="@layout/fragment_whats_your_weight" >
         <action
@@ -104,7 +118,7 @@
     </fragment>
     <fragment
         android:id="@+id/heightFragment"
-        android:name="com.example.pulseup.ui.setUp.HeightFragment"
+        android:name="com.example.pulseup.ui.setUp.weightHeight.HeightFragment"
         android:label="fragment_height"
         tools:layout="@layout/fragment_height" >
         <argument
@@ -144,8 +158,8 @@
         android:label="fragment_fill_your_profile"
         tools:layout="@layout/fragment_fill_your_profile" >
         <action
-            android:id="@+id/action_fillYourProfileFragment_to_homeFragment"
-            app:destination="@id/homeFragment"
+            android:id="@+id/action_fillYourProfileFragment_to_mainFragment"
+            app:destination="@id/mainFragment"
             app:launchSingleTop="true"
             app:popUpTo="@id/blankFragment"
             app:popUpToInclusive="true" />
@@ -171,7 +185,7 @@
     </fragment>
     <fragment
         android:id="@+id/workoutFragment"
-        android:name="com.example.pulseup.ui.main.WorkoutFragment"
+        android:name="com.example.pulseup.ui.main.workout.WorkoutFragment"
         android:label="fragment_workout"
         tools:layout="@layout/fragment_workout" >
         <argument
@@ -183,7 +197,7 @@
     </fragment>
     <fragment
         android:id="@+id/trainingFragment"
-        android:name="com.example.pulseup.ui.main.TrainingFragment"
+        android:name="com.example.pulseup.ui.main.workout.TrainingFragment"
         android:label="fragment_training"
         tools:layout="@layout/fragment_training" >
         <argument
@@ -193,11 +207,27 @@
             android:id="@+id/action_trainingFragment_to_endWorkoutFragment"
             app:destination="@id/endWorkoutFragment"
             app:enterAnim="@anim/nav_default_pop_enter_anim"
-            app:popUpTo="@id/homeFragment" />
+            app:popUpTo="@id/mainFragment" />
     </fragment>
     <fragment
         android:id="@+id/endWorkoutFragment"
-        android:name="com.example.pulseup.ui.main.EndWorkoutFragment"
+        android:name="com.example.pulseup.ui.main.workout.EndWorkoutFragment"
         android:label="fragment_end_workout"
         tools:layout="@layout/fragment_end_workout" />
+    <fragment
+        android:id="@+id/mainFragment"
+        android:name="com.example.pulseup.ui.main.MainFragment"
+        android:label="fragment_main"
+        tools:layout="@layout/fragment_main" >
+        <action
+            android:id="@+id/action_mainFragment_to_workoutFragment"
+            app:destination="@id/workoutFragment"
+            app:enterAnim="@anim/nav_default_enter_anim" />
+        <action
+            android:id="@+id/action_mainFragment_to_startFragment"
+            app:destination="@id/startFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/mainFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
 </navigation>
