--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -84,6 +84,10 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="MyTextAppearance.BodyBold1.Black">
+        <item name="android:textColor">@color/black_main</item>
+    </style>
+
     <style name="MyTextAppearance.BodyBold1.White_A80">
         <item name="android:textColor">@color/white_A80</item>
     </style>
@@ -118,6 +122,17 @@
         <item name="android:textColorHint">@color/black_A60</item>
         <item name="android:textColor">@color/black_main</item>
         <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="InputLayout.ExposedDropDownMenu" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
+        <item name="boxBackgroundColor">@color/white</item>
+        <item name="boxCornerRadiusTopStart">20dp</item>
+        <item name="boxCornerRadiusTopEnd">20dp</item>
+        <item name="errorEnabled">false</item>
+        <item name="errorIconDrawable">@null</item>
+        <item name="boxCornerRadiusBottomStart">20dp</item>
+        <item name="boxCornerRadiusBottomEnd">20dp</item>
+        <item name="android:textAppearance">@style/MyTextAppearance.BodyBold1.Black</item>
     </style>
 
     <style name="ButtonPrimary">
